--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +11,7 @@
       content="The Jleim Church Website"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.webp" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Jleim Church</title>
